Practicas/k8s/Practica-despliegue/config_despliegue/namespace_2/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ns2-XXXXX # Cambia esto por tu namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx-taller:1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"          # Solicita solo 50 milicores (0.05 CPU)
            memory: "32Mi"      # Solicita solo 32 MiB de memoria
          limits:
            cpu: "100m"         # Limita el uso a 100 milicores (0.1 CPU)
            memory: "64Mi"     # Limita el uso a 64 MiB de memoria
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
