Practicas/k8s/Practica-despliegue/config_despliegue/namespace_2/netpol-1-block-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: ns2-XXXXX  # Cambia esto por tu namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
