Practicas/k8s/Practica-despliegue/config_despliegue/namespace_2/netpol-2-allow-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-external
  namespace: ns2-XXXXX  # Cambia esto por tu namespace
spec:
  podSelector:
    matchLabels:
      app: nginx  # Asegúrate de que esta etiqueta coincida con los pods de tu Nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0  # Permitir tráfico de cualquier IP externa
      ports:
        - protocol: TCP
          port: 80  # Puerto del contenedor Nginx
