Practicas/k8s/Practica-despliegue/config_despliegue/namespace_2/netpol-3-conn-into-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: ns2-XXXXX  # Cambia esto por tu namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}  # Permitir tráfico de todos los pods en el mismo namespace
